# pdf2img-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cli.rs  config.rs  main.rs
src/proc/: img.rs  mod.rs  pdf.rs
src/processing/: document.rs  image.rs  mod.rs
